// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AuthorityStatus /> should handle generating CA 1`] = `
<div>
  <div
    class="card p-4"
  >
    <h2>
      Generating certification authority
    </h2>
    <p>
      Your certification authority is now being generated. It usually takes a few minutes. Settings will appear here automatically once the authority is ready.
    </p>
    <div
      class="spinner-wrapper my-3 text-center"
    >
      <div
        class="spinner-border"
        role="status"
      >
        <span
          class="sr-only"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<AuthorityStatus /> should handle missing CA 1`] = `
<div>
  <div
    class="card p-4"
  >
    <h2>
      No certification authority
    </h2>
    <p>
      Currently there is no OpenVPN certificate authority (CA). A CA is required to generate client certificates to authenticate to the OpenVPN server. To proceed you need to generate it first.
    </p>
    <div
      class="col-sm-12 col-lg-12 p-0 mb-3 text-right"
    >
      <button
        class="btn btn-primary  col-sm-12 col-md-3 col-lg-2"
        type="button"
      >
        Generate CA
      </button>
    </div>
  </div>
</div>
`;

exports[`<AuthorityStatus /> should handle ready CA 1`] = `
<div>
  <div
    class="card p-4"
  >
    <h2>
      Certificate Authority
    </h2>
    <p>
      Your certificate authority (CA) is set up properly. Please note that if you delete it, all clients will have their access revoked.
    </p>
    <div
      class="text-right"
    >
      <button
        class="btn btn-danger col-sm-12 col-md-3 col-lg-2"
        type="button"
      >
        Delete CA
      </button>
    </div>
  </div>
</div>
`;
